Changed $main-font-size to -main-font-size-16px to be more specific in variable name

--- a/style/scss/utils/_variables.scss
+++ b/style/scss/utils/_variables.scss
@@ -5,7 +5,7 @@ $very-pale-blue: hsl(225, 100%, 98%);
 $desaturated-blue: hsl(224, 23%, 55%);
 $dark-blue: hsl(223, 47%, 23%);
 
-$main-font-size: 16px;
+$main-font-size-16px: 16px;
 $main-font-family-red-hat: 'Red hat Display', sans-serif;
 
 $font-weight-500: 500;
