--- a/style/scss/style.scss
+++ b/style/scss/style.scss
@@ -1,1 +1,20 @@
 @import './utils/variables';
+
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+body {
+  width: 100dvw;
+  height: 100dvh;
+  display: grid;
+  place-items: center;
+  background-image: url('./../../assets/images/pattern-background-desktop.svg');
+  @media screen and (min-width: 320px) and (max-width: 500px) {
+    background-image: url('./../../assets/images/pattern-background-mobile.svg');
+  }
+  font-family: $main-font-family-red-hat;
+  font-size: $main-font-size-16px;
+}
