--- a/style/scss/utils/_variables.scss
+++ b/style/scss/utils/_variables.scss
@@ -6,7 +6,7 @@ $desaturated-blue: hsl(224, 23%, 55%);
 $dark-blue: hsl(223, 47%, 23%);
 
 $main-font-size-16px: 16px;
-$main-font-family-red-hat: 'Red hat Display', sans-serif;
+$main-font-family-red-hat: 'Red Hat Display', sans-serif;
 
 $font-weight-500: 500;
 $font-weight-700: 700;
