--- a/style/scss/style.scss
+++ b/style/scss/style.scss
@@ -12,9 +12,12 @@ body {
   display: grid;
   place-items: center;
   background-image: url('./../../assets/images/pattern-background-desktop.svg');
-  @media screen and (min-width: 320px) and (max-width: 500px) {
+  @media screen and (min-width: 320px) and (max-width: 550px) {
     background-image: url('./../../assets/images/pattern-background-mobile.svg');
   }
+  //   background-repeat: no-repeat;
   font-family: $main-font-family-red-hat;
   font-size: $main-font-size-16px;
+  font-weight: $font-weight-500;
+  @import './components/_summary-card';
 }
