Changed link color for a lighten $bright-blue

--- a/style/scss/components/__plan-presentation.scss
+++ b/style/scss/components/__plan-presentation.scss
@@ -20,5 +20,12 @@
 
   &-change-link {
     font-size: 0.8rem;
+    color: lighten($bright-blue, 10%);
+    font-weight: $font-weight-700;
+
+    &:hover {
+      font-weight: $font-weight-700;
+      text-decoration: none;
+    }
   }
 }
