--- a/style/scss/components/_proceed-payment-btn.scss
+++ b/style/scss/components/_proceed-payment-btn.scss
@@ -13,13 +13,6 @@
   z-index: 1;
   transition: box-shadow 0.5s linear;
 
-  &:hover {
-    box-shadow: 0 3px 5px $desaturated-blue;
-    &::before {
-      transform: scaleX(1);
-    }
-  }
-
   &::before {
     content: '';
     display: block;
@@ -31,8 +24,15 @@
     right: 0;
     border-radius: 10px;
     transform: scaleX(0);
-    transform-origin: right;
+    transform-origin: left;
     z-index: -1;
     transition: transform 0.4s linear;
+  }
+
+  &:hover {
+    box-shadow: 0 3px 5px $desaturated-blue;
+    &::before {
+      transform: scaleX(1);
+    }
   }
 }
